--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html >
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>PHOTOGRAPHY </title>
@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui"/>
 
-<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'/>
+<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'/>
 <link rel="shortcut icon" href="img/favicon.ico"/>
 <!--[if lte IE 8]>
 <link rel="stylesheet" type="text/css" href="css/css_ie.css" />
@@ -21,7 +21,7 @@
 <link rel="stylesheet" type="text/css" href="js/jScrollPane/style/jquery.jscrollpane.css" media="all" />
 <link rel="stylesheet" type="text/css" href="js/video-js/video-js.css" media="all" />
 
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script type="text/javascript" src="js/carouFredSel/jquery.carouFredSel-3.2.1-packed.js"></script>
 <script type='text/javascript' src='js/debouncedresize/jquery.debouncedresize.js'></script>
 <script type="text/javascript" src="js/timer/jquery.timers.js"></script>
