--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <body id="body">
 <!-- Page loading icon -->
-<div id="loader"><img src="img/loader2.gif" alt="please wait, site is loading"/></div>
+<div id="loader"><img src="img/loader2.gif" alt="Loading . . . "/></div>
 <!-- Logo -->
 <div id="logo"><a href="index.html" title="Big Gallery"></a></div>
 <!-- Menu show -->
