--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
 <body id="body">
 <!-- Page loading icon -->
-<div id="loader"><img src="img/loader2.gif" alt="Loading . . . "/></div>
+<div id="loader"><img src="img/loader2.gif" alt="LOADING . . . "/></div>
 <!-- Logo -->
-<div id="logo"><a href="index.html" title="Big Gallery"></a></div>
+<div id="logo"><a href="index.html" title="BIG GALLERY"></a></div>
 <!-- Menu show -->
 <div id="menu-show"><div id="menu-show-arrow"></div></div>
 <div id="menu-hide"><div id="menu-hide-arrow"></div></div>
